# arush-naukri-portal

./: LICENSE  README.md  app.py  pyproject.toml
templates/: home.html  jobitem.html  nav.html
